nks_kr_imqa-nks_779f037f-8394-4de0-9af1-032fb12814b6/nhbank/ingress/imqa-alb-ingress-collector.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "31266"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "47914"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: instance
spec:
  defaultBackend:
    service:
      name: otel-collector
      port:
        number: 4318
  ingressClassName: alb
  rules:
  - host: nhbank-collector.imqa.io
    http:
      paths:
      - backend:
          service:
            name: otel-collector
            port:
              number: 4318
        path: /
        pathType: Prefix
